--- a/pages/p8/959657.md
+++ b/pages/p8/959657.md
@@ -1,4 +1,4 @@
-### 人生怎么走？(图)
+### 警惕身边如“狼”一样的人(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="人生 命运 成功" src="https://img3.secretchina.com/pic/2020/9-17/p2778182a368555211-ss.jpg"/>
+  <img alt="善良 人性 感恩" src="https://img3.secretchina.com/pic/2021/1-20/p2861102a904523669-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   路在脚下，怎么走，自己决定。（图片来源：Adobe Stock）
+   千万要警惕身边如狼一样的人。（图片来源：Adobe stock)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,60 +21,48 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
+  对待恶人永远不要太过
   <strong>
-   （一）观念决定
-   <span href="https://www.secretchina.com/news/gb/tag/人生" target="_blank">
-    人生
+   <span href="https://www.secretchina.com/news/gb/tag/善良" target="_blank">
+    善良
    </span>
   </strong>
+  ，毫无防备之心，还是要学会保护自己。看透
+  <strong>
+   人性
+  </strong>
+  ，才是对自己负责。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  有位木匠砍了一树，把它做了木桶。
+  很久以前，有一位猎人，住在深山老林，以打猎为生，养妻育子，其乐融融。
  </p>
  <p>
-  一个装粪，就叫【粪桶】，众人躲着。
+  某天，日暮时分，猎人还没打到一只猎物，正在拖着疲惫的身子准备返回时，突然发现一声狼嚎。他顺势望去，只见一只受伤的
+  <span href="https://zh.wikipedia.org/wiki/%E7%8B%BC">
+   狼
+  </span>
+  趴在血泊中，身边满是撕打的痕迹。
  </p>
  <p>
-  一个装水，就叫【水桶】，众人用着。
+  猎人喜出望外。但走近一看，老狼泪眼朦胧，嗷嗷求救。猎人顿生恻隐之心，就小心翼翼地把狼背到家里，精心喂养并疗伤。
  </p>
  <p>
-  一个装酒，就叫【酒桶】，众人品着。
+  妻子好言相劝，让他把狼杀了，以绝后患，他痛斥妻子。猎狗有时在狼面前示威警告，他痛打爱犬。终于有一天狼伤愈体健，不辞而别。
  </p>
  <p>
-  一个装钱，就叫【钱桶】，众人喜爱。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  桶是一样的，因装的东西不同
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/命运" target="_blank">
-    命运
-   </span>
-  </strong>
-  也就不同。
+  有一次，妻子回娘家，山高路远，就把孩子留在家，讬猎人代为照顾。想上山打猎的猎人不放心，就将猎犬留到家看护幼儿。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -89,7 +77,7 @@
   </div>
  </center>
  <p>
-  人生亦如此，有什么样的观念，就有什么样的人生，有什么样的想法，就有什么样的生活！
+  晩上回家时，眼前的一幕彻底将他惊呆了！儿子躺在地上，已经断气。满地血迹，猎狗也浑身是伤，满嘴血迹，爬在儿子身边嗷嗷直叫。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -104,9 +92,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   （二）累是走上坡路
-  </strong>
+  猎人不容分说，就想对猎狗一阵痛打，猎狗反倒跑了起来。当猎人追到房后时，发现他曾经喂养过的那只狼浑身是伤，死在了那里。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -121,7 +107,7 @@
   </div>
  </center>
  <p>
-  狼行千里吃肉，马行千里吃草；活鱼逆流而上，死鱼随波逐流。
+  这时，猎人才明白自己冤枉了猎狗，而真正的凶手却是自己救治的那只狼。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -136,7 +122,7 @@
   </div>
  </center>
  <p>
-  有这么一句话：人生很累！累就对了，【舒服】是留给死人的！
+  他一边抚摸被误会的爱犬，一边嚎啕大哭，后悔自己的善心害死了心爱的儿子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -151,7 +137,11 @@
   </div>
  </center>
  <p>
-  【苦】-才是人生。
+  这个故事，让我们联想到了
+  <span href="https://www.secretchina.com/news/gb/tag/人性" target="_blank">
+   人性
+  </span>
+  。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -166,7 +156,7 @@
   </div>
  </center>
  <p>
-  【累】-才是工作。
+  有些人，如狼一样，能利益共享，有难各奔东西，甚至反咬一口。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,7 +171,7 @@
   </div>
  </center>
  <p>
-  【变】-才是命运。
+  所以，有时候千万要警惕身边如狼一样的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,7 +186,7 @@
   </div>
  </center>
  <p>
-  【忍】-才是历练。
+  英国作家萨克雷说：“如果一个人，深受大恩而后来又和恩人反目的话，他要顾全自己的体面，一定比不相干的陌路人更加恶毒。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +201,7 @@
   </div>
  </center>
  <p>
-  【容】-才是智慧。
+  有个网友就曾分享自己的亲身遭遇，她在大城市奋斗了好几年，工作上也有一些小成就。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -226,7 +216,7 @@
   </div>
  </center>
  <p>
-  【静】-才是修养。
+  她一位学妹刚毕业，也想在大城市找工作，可由于人生地不熟，好心的网友就让学妹先来自己租屋的地方暂住。由于俩人是同一专业，网友顺便就把学妹介绍到自己的公司去了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,7 +231,7 @@
   </div>
  </center>
  <p>
-  【舍】-才是得到。
+  在生活上，网友也处处照顾学妹，怕她刚来不习惯，买菜做饭也尽量照顾她的胃口。在工作上，也是尽量帮助学妹尽量适应，有什么问题都尽量的帮助她。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -256,120 +246,7 @@
   </div>
  </center>
  <p>
-  【做】-才是拥有。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  如果，感到此时的自己很辛苦，告诉自己：容易走的都是下坡路，坚持住，因为你正在走【上坡路】！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   （三）这就是人生
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  拉面说：想
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/成功" target="_blank">
-    成功
-   </span>
-  </strong>
-  ，得有人拉一把。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  饺子说：脸皮不能太薄。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  窝窝头说：还是留个心眼好。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  豆腐说：关键阶段，需要“点化”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  虾说：大红之日，便是大悲之时。
+  有一次，因为网友有事情请假了，而那个学妹也恰巧有一个紧急的文件需要完成。可平时学妹习惯了依赖学姐的帮忙，这一下子学姐不在，就着急了起来。果不其然，学妹刚把文件交上去，就被主管狠批一顿。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -388,7 +265,7 @@
   </ins>
  </center>
  <p>
-  啤酒说：别急，总有让你冒泡的时候。
+  从此以后，学妹虽然表面上平静，但心里上早就有些抱怨网友不帮自己。所以，有时候学妹也动不动找机会在背后给学姐穿小鞋。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -403,7 +280,7 @@
   </div>
  </center>
  <p>
-  面包说：渺小时，比较充实，伟大后，觉得空虚。
+  最后网友看清了她的真面目之后，也渐渐的远离了她，并另寻地方租屋，让学妹自己去负担租屋及一切生活开销。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -418,178 +295,92 @@
   </div>
  </center>
  <p>
-  油条说：不受煎熬，不会成熟；总受煎熬，会成为老油条。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这就是人生！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+  人心难测，人性险恶。当我们遇上不懂得
   <strong>
-   结语
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  成功的路上离不开：
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【贵人的帮助】，
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【名师的指点】，
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【朋友的理解】，
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【小人的刺激】，
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【亲人的支持】。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  人生不易，且行且珍惜。你的人生怎么走、怎么看，你自己决定。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+   <span href="https://www.secretchina.com/news/gb/tag/感恩" target="_blank">
+    感恩
    </span>
-  </center>
+  </strong>
+  ，反而反咬一口的人，尽快远离。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  千万别惯坏不领情的人，也别喂饱不懂感恩的心。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  人心贪婪，人性难测。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  当你的善良不小心给了个不懂珍惜的人，那就学会放弃。因为他从来不知道你的付出过程有多么辛苦。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  自古以来，农夫与蛇，
+  <span href="https://zh.wikisource.org/wiki/%E4%B8%AD%E5%B1%B1%E7%8B%BC%E5%82%B3">
+   东郭先生
+  </span>
+  和狼等故事形象地告诉我们：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  对待恶人永远不要太善良，学会保护自己。看透人性，才是对自己负责。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -602,6 +393,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:wendy
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41eL"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -619,13 +444,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/946310.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/946310.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/946310.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/25/946310.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959657.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959657.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959657.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/24/959657.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/946310.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/959657.md' width='0px' height='0px'/>
